2018-02-09 Tomas Dado <tomas.dadod@cern.ch>
    * Added new option to JOB settings "SuppressNegativeBinWarnings", if set
	to true the code will not print out warning about (zero)negative bin
	contents, closes TTHFITTER-62
	* Added new printout option, Verbose. Activated when DebugLevel > 2.
	Applied to correlation matrices. Solves TTHFITTER-170

2018-02-08 Tomas Dado <tomas.dadod@cern.ch>
    * Added support for morphing when two different variables that use morphing for templates are used

2018-02-02 Alexander Held <alexander.held@cern.ch>
    * Added new Samples option BuildPullTable to create tables showing post-fit acceptance effect of nuisance parameter pulls
    * See README for details
    * Original implementation by Jelena Jovicevic / Thomas Calvet
    * Closes TTHFITTER-169

2018-02-02 Michele Pinamonti <michele.pinamonti@gmail.com>
    * template fitting improved, with post-fit functionality working (still not for summary and tables, systematics to check)
    
2018-02-01 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Small fix preventing a crash when producing pre-fit yield tables
    * CustomFunctions option added for Job, to be able to use custom functions defined in .C files for selection or weights (instructions in the README)

2018-01-26 Michele Pinamonti <michele.pinamonti@gmail.com>
    * template fitting improved, with prefit functionality working (still no post-fit)
    
2018-01-25 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Added first version of template fitting (1D signal morphing) THANKS TOMAS DADO!!
    * Working on TTHFITTER-139
    * Fixed small issue with prefit tables causing crash sometimes
    
2018-01-24 Michele Pinamonti <michele.pinamonti@gmail.com>
    * Fixed runAsymptoticCLs_inject
    * Fixed crashes related to post-fit and gamma uncertainty propagation
    * Fixed small bugs from previous commit
    * Added/fixed flags to remove xerror bars and end-bars
    * IMPORTANT: FIXED BUG IN WEIGHT SYSTEMATICS
