@@ -39,12 +39,18 @@ void CorrelationMatrix::SetCorrelation(string p0,string p1,float corr){
 //__________________________________________________________________________________
 //
 float CorrelationMatrix::GetCorrelation(string p0,string p1){
+    bool isMorph_p0 = false;
+    bool isMorph_p1 = false;
+    if (p0.find("morph_") != std::string::npos) isMorph_p0 = true;
+    if (p1.find("morph_") != std::string::npos) isMorph_p1 = true;
     if(!fNuisParIsThere[p0]){
-        WriteWarningStatus("CorrelationMatrix::GetCorrelation", "NP " + p0 + " not found in correlation matrix. Returning correlation = 0.");
+        if(!isMorph_p0) WriteWarningStatus("CorrelationMatrix::GetCorrelation", "NP " + p0 + " not found in correlation matrix. Returning correlation = 0.");
+        else WriteVerboseStatus("CorrelationMatrix::GetCorrelation", "NP " + p0 + " not found in correlation matrix. The NP is for morphing. Returning correlation = 0.");
         return 0.;
     }
     if(!fNuisParIsThere[p1]){
-        WriteWarningStatus("CorrelationMatrix::GetCorrelation", "NP " + p1 + " not found in correlation matrix. Returning correlation = 0.");
+        if(!isMorph_p1) WriteWarningStatus("CorrelationMatrix::GetCorrelation", "NP " + p1 + " not found in correlation matrix. Returning correlation = 0.");
+        else WriteVerboseStatus("CorrelationMatrix::GetCorrelation", "NP " + p0 + " not found in correlation matrix. The NP is for morphing. Returning correlation = 0.");
         return 0.;
     }
     int idx0 = fNuisParIdx[p0];
